--- a/app/src/main/res/layout/start_activity_layout.xml
+++ b/app/src/main/res/layout/start_activity_layout.xml
@@ -1,11 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/start_activity_layout"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_start_ogre"
-        android:text="Start Ogre"/>
+        android:orientation="horizontal">
+
+        <Button
+            android:text="Button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button1"
+            android:layout_weight="1"/>
+
+        <Button
+            android:text="Button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
+    <com.example.ogretest.OgreView
+        android:id="@+id/ogre_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
